--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,3 +24,6 @@ jobs:
       - name: Run the Python script
         run: |
           python src/main.py
+        env:
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          TELEGRAM_TOKEN: ${{secrets.TELEGRAM_TOKEN}}
