--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ greenlet==3.0.3
 idna==3.10
 numpy==2.1.2
 pandas==2.2.3
+pillow==11.0.0
+playwright==1.47.0
 pyee==12.0.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
