Fix filter to filter last half hour coins

--- a/.github/workflows/chains_info.yml
+++ b/.github/workflows/chains_info.yml
@@ -25,5 +25,5 @@ jobs:
         run: |
           python src/main.py --generate chains_info
         env:
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_SYBIL_SANCTUM_CHAT_ID }}
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
