--- a/.github/workflows/last_half_hour_coins.yml
+++ b/.github/workflows/last_half_hour_coins.yml
@@ -1,4 +1,4 @@
-name: Coins added in the last 30 minutes.
+name: Generate message with coins added in the last 30 minutes.
 
 on:
   schedule:
@@ -25,7 +25,7 @@ jobs:
 
       - name: Generate coins added in the last 30 minutes
         run: |
-          python src/main.py --generate last_hour_coins
+          python src/main.py --generate last_half_hour_coins
         env:
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_SYBIL_SANCTUM_CHAT_ID }}
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
