--- a/.github/workflows/top_10_week_coins.yml
+++ b/.github/workflows/top_10_week_coins.yml
@@ -25,5 +25,5 @@ jobs:
         run: |
           python src/main.py --generate top_10_week_coins
         env:
-          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_SYBIL_SANCTUM_CHAT_ID }}
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
