--- a/.github/workflows/last_half_hour_coins.yml
+++ b/.github/workflows/last_half_hour_coins.yml
@@ -29,3 +29,5 @@ jobs:
         env:
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_SYBIL_SANCTUM_CHAT_ID }}
           TELEGRAM_TOKEN: ${{ secrets.TELEGRAM_TOKEN }}
+          PLATFORM: 'geckoterminal'
+          NETWORK: 'solana'
